Comment out Professional Summary section

--- a/resume.tex
+++ b/resume.tex
@@ -107,14 +107,11 @@
 \end{tabular*}
 
 %----------PROFESSIONAL SUMMARY------------
-\section{Professional Summary}
-\begin{itemize}[leftmargin=0.15in, label={}]
-    {\item{
-
-    Computer Science graduate student with hands-on experience in GenAI applications, machine learning, and systems engineering. Proficient in prompt engineering and developing automated workflows that leverage AI capabilities across diverse domains. Skilled in Python-based data processing pipelines and optimizing large-scale systems. Eager to apply GenAI expertise to automate and enhance Systems Engineering workflows at Waymo.
- 
-   }}
-\end{itemize}
+%\section{Professional Summary}
+%\begin{itemize}[leftmargin=0.15in, label={}]
+%{\item{
+ %  }}
+%\end{itemize}
 
 
 
