Restore Student Identification Management project details
Restored project details for the Student Identification Management project, including descriptions of facial recognition system and microservices architecture.

--- a/resume.tex
+++ b/resume.tex
@@ -175,13 +175,13 @@
             \resumeItem{Optimized performance with SSR/SSG strategies achieving 25\% faster initial page loads and reduced code duplication by 40\% through centralized business logic in API routes.}
           \resumeItemListEnd
           
-      %\resumeProjectHeading
-          %{Student Identification Management}{Python, Flask, OpenCV}{Jan 2025}{https://github.com/venu284/Student-Identification-Management.git}
-         % \resumeItemListStart
-          %  \resumeItem{Developed a facial recognition system that processes real-time video streams, extracts face encodings, and matches identities with 95\% accuracy using OpenCV and face recognition libraries.}
-          %  \resumeItem{Built scalable microservices architecture with RESTful APIs connecting frontend experience to backend processing, implementing efficient data flow patterns.}
-          %  \resumeItem{Designed a SQLite data model with server-side pagination and implemented lifecycle management for resources and reduced query loads by up to 90\% and ensuring reliable runtime with zero orphaned camera locks.}
-         % \resumeItemListEnd
+      \resumeProjectHeading
+          {Student Identification Management}{Python, Flask, OpenCV}{Jan 2025}{https://github.com/venu284/Student-Identification-Management.git}
+          \resumeItemListStart
+            \resumeItem{Developed a facial recognition system that processes real-time video streams, extracts face encodings, and matches identities with 95\% accuracy using OpenCV and face recognition libraries.}
+            \resumeItem{Built scalable microservices architecture with RESTful APIs connecting frontend experience to backend processing, implementing efficient data flow patterns.}
+            \resumeItem{Designed a SQLite data model with server-side pagination and implemented lifecycle management for resources and reduced query loads by up to 90\% and ensuring reliable runtime with zero orphaned camera locks.}
+          \resumeItemListEnd
 
           
            
