Revise technical skills section in resume

--- a/resume.tex
+++ b/resume.tex
@@ -193,11 +193,12 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \item{
-     \textbf{AI \& ML:} TensorFlow, PyTorch, Computer Vision, NLP, Prompt Engineering, ML Pipeline Design \\
-     \textbf{Systems \& Testing:} CI/CD Pipelines, System Integration, Test Automation, Workflow Orchestration \\
-     \textbf{Programming:} Python, SQL, Java, JavaScript \\
-     \textbf{DevOps \& Tools:} Docker, Git, Kubernetes, MongoDB \\
-     \textbf{Data Processing:} NumPy, Pandas, Data Transformation, Matplotlib, Scikit-learn \\
+     \textbf{AI \& ML:} TensorFlow, PyTorch, Computer Vision, NLP, Scikit-learn, NumPy, Pandas, Matplotlib \\
+     \textbf{Programming:} Python, Java, JavaScript, SQL, HTML, CSS \\
+     \textbf{Web Technologies:} React, Next.js, Spring Boot, Node.js, REST APIs \\
+     \textbf{DevOps \& Tools:} Git, Docker, CI/CD Pipelines, Kubernetes \\
+     \textbf{Databases:} MySQL, MongoDB, JPA/Hibernate \\
+     
     }
  \end{itemize}
 
